<?xml version="1.0" encoding="utf-8"?>
<id.stsn.stm9.widget.UserIdEditor xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RadioButton
        android:id="@+id/isMainUserId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_main_user_id" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TableRow>

                <TextView
                    android:id="@+id/label_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="5dip"
                    android:text="@string/label_name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName|textCapWords" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="5dip"
                    android:text="@string/label_email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/label_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="5dip"
                    android:text="@string/label_comment" />

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>

        <ImageButton
            android:id="@+id/delete"
            style="@style/MinusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />

</id.stsn.stm9.widget.UserIdEditor>